added libplug.so in add_library. we used plug.hpp and cpp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ set(SOURCES
 
 add_executable(main ${SOURCES})
 
+add_library(plug SHARED src/plug.cpp src/plug.hpp)
+
 if(UNIX)
   target_link_options(main PUBLIC "-Wl,-rpath,/usr/local/lib/" "-Wl,-rpath,.")
   target_link_libraries(main PUBLIC
